--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,20 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+}
+
+.gallery-image {
+  width: 360px;
+  height: 300px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.gallery-image:hover {
+transform: scale(1.05);
+}
