--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -33,3 +33,81 @@
 .gallery-image:hover {
 transform: scale(1.05);
 }
+
+.feedback-form {
+   display: flex;
+    flex-direction: column;
+    
+    border-radius: 8px;
+padding: 24px;
+width: 408px;
+height: 296px;
+background-color: #fff;
+}
+
+.form-group {
+display: flex;
+align-items: flex-start;
+justify-content: flex-start;
+flex-direction: column;
+
+}
+
+.form-label {
+  font-weight: 400;
+font-size: 16px;
+letter-spacing: 0.04em;
+color: #2e2f42;
+display: block;
+  flex-direction: column;
+  margin-bottom: 8px;
+  text-align: left;
+}
+
+.form-input {
+   border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+background-color: transparent;
+outline: transparent;
+width: 100%;
+height: 40px;
+padding: 8px 16px 8px 16px;
+margin-bottom: 8px;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-textarea {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+width: 100%;
+height: 120px;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: rgba(46, 47, 66, 0.4);
+background-color: transparent;
+outline: transparent;
+padding: 8px 16px;
+resize: none;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.submit-btn {
+  border-radius: 8px;
+padding: 8px 16px;
+width: 95px;
+height: 40px;
+cursor: pointer;
+border: none;
+color: #fff;
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+letter-spacing: 0.04em;
+background-color: #4e75ff;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.submit-btn:hover {
+background-color: #6c8cff;
+}
